kubernetes/argocd/argocd-app/stateful/qbittorrent/stateful.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: qbittorrent
  namespace: qbittorrent
spec:
  replicas: 1
  serviceName: qbittorrent
  selector:
    matchLabels:
      app: qbittorrent
  template:
    metadata:
      labels:
        app: qbittorrent
    spec:
      automountServiceAccountToken: false
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: qbittorrent-config-pvc
      - name: data1
        persistentVolumeClaim:
          claimName: qbittorrent-data1-pvc
      - name: data2
        persistentVolumeClaim:
          claimName: qbittorrent-data2-pvc
      containers:
      - name: qbittorrent
        image: lscr.io/linuxserver/qbittorrent:5.2.3
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 2000m
            memory: 1Gi
        ports:
        - name: web
          containerPort: 8080
        - name: bittorrent-tcp
          containerPort: 6881
          protocol: TCP
        - name: bittorrent-udp
          containerPort: 6881
          protocol: UDP
        volumeMounts:
        - name: config
          mountPath: /config
        - name: data1
          mountPath: /mnt/data1
        - name: data2
          mountPath: /mnt/data2
